...
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Find Restaurants"
        android:id="@+id/findRestaurantsButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/locationEditText"
        android:background="@color/colorTextIcons"
        android:layout_above="@+id/findRestaurantsButton"
        android:layout_marginBottom="10dp"
        android:padding="5dp"
        android:hint="Enter a Location"
        android:layout_centerHorizontal="true" />
...
